Fixed broken link to HF Course

--- a/Intro_Advanced.ipynb
+++ b/Intro_Advanced.ipynb
@@ -849,7 +849,7 @@
     }
    },
    "source": [
-    "I *strongly suggest* that you follow the excellent [HuggingFace course](https://huggingface.co/)\n",
+    "I *strongly suggest* that you follow the excellent [HuggingFace course](https://huggingface.co/course)\n",
     "- reinforces the concepts\n",
     "- but *emphasizes the coding* that you will need for the Final Project\n",
     "    - worth being familiar with their Hub by the middle of this course\n",
