--- a/Intro_to_Attention.ipynb
+++ b/Intro_to_Attention.ipynb
@@ -85,6 +85,7 @@
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
        "%\n",
+       "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
        "\\def\\rand#1{\\tilde{#1}}\n",
@@ -110,6 +111,11 @@
        "%\n",
        "% Expectation operator\n",
        "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
        "%\n",
        "% Reinforcement learning\n",
        "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
@@ -370,43 +376,33 @@
     }
    },
    "source": [
+    "## Decoder output $\\hat\\y_\\tp$\n",
     "\n",
-    "The following diagram is a condensed depiction of the process\n",
-    "<br>\n",
-    "<br>\n",
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Sequence to Sequence: training (teacher forcing) + inference: No attention</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/RNN_seq2seq.png\"></td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "We will focus on the part of the Decoder\n",
-    "- the maps Decoder short term memory $\\h_\\tp$ \n",
-    "- to next output $\\hat\\y_\\tp$\n",
-    "- implementing a function \n",
+    "The simplest RNN (corresponding to our diagrams) use the latent state $\\h_\\tp$ as the output $\\hat\\y_\\tp$\n",
+    "$$\n",
+    "\\hat\\y_\\tp = \\h_\\tp\n",
+    "$$\n",
+    "\n",
+    "It is easy to add another NN to transform $\\h_\\tp$ into a $\\hat\\y_\\tp$ that is different.\n",
+    "\n",
+    "We can add a NN to the Decoder RNN that implements a function $D$ that transforms the latent state into an output.\n",
+    "\n",
     "$$\\hat\\y_\\tp = D(\\h_\\tp)$$\n",
     "\n",
+    "For clarity: we will omit this additional NN from our diagrams until it becomes necessary\n",
+    "\n",
+    "Here is what the additional NN looks like:\n",
     "<br>\n",
     "<br>\n",
     "\n",
+    "\n",
+    "\n",
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>Decoder: No attention</center></th>\n",
+    "        <th><center>Decoder output transformation: No attention</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/Decoder_no_attention.png\" width=80%></td>\n",
+    "        <td><img src=\"images/Decoder_no_attention.png\" width=70%></td>\n",
     "    </tr>\n",
     "</table>"
    ]
@@ -462,15 +458,96 @@
     }
    },
    "source": [
-    "\n",
     "All \"knowledge\" from the Context must be transfered from Encoder to Decoder\n",
     "- through final Encoder state $\\bar \\h_{(\\bar T)}$\n",
     "- which in turn was encoded in all Encoder states $\\bar \\h_{({\\bar \\tt}')} \\text{ for } \\tt' \\ge \\bar p$\n",
-    "    - where $\\bar p$ is the position withing sequence $\\x$ of the word \"Machine\"\n",
-    "\n",
-    "This knowledge must be carried forward by the Decoder\n",
+    "    - where $\\bar p$ is the position withing sequence $\\x$ of the word \"Machine\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can hypothesize that the final Encoder latent state $\\bar\\h_{\\bar T}$\n",
+    "- encodes a Dictionary (key/value pairs)\n",
+    "- mapping Place-holder names to Concrete values\n",
+    "- the dictionary is built incrementally by prior latent states of the Encoder\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Answering questions using Attention</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Attention_example_1.png\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This dictionary is passed to the Encoder\n",
+    "- and must be carried forward by the Decoder\n",
     "- through Decoder states $[ \\h_{(1)}, \\dots, \\h_{(4)} ]$\n",
-    "\n"
+    "- in order to make the dictionary available to subsequent latent states of the Decoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We further hypothesize that the Decoder\n",
+    "- performs Lookups \n",
+    "- by using the Decoder latent state $\\h_\\tp$\n",
+    "    - as a *query* that matches against the keys of the Dictionary\n",
+    "    - in order to obtain the Concrete value required to produced output token at position $\\tt$\n",
+    "    $$\\hat\\y_\\tp = D(\\h_\\tp)$$\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Query performing a Lookup in the Dictionary</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Attention_example_2.png\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Here is a picture describing this hypothetical functioning.\n",
+    "<br>\n",
+    "<br>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>RNN Encoder/Decoder without Attention</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/RNN_layer_API_Encoder_Decoder.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Encoder_Decoder_no_attention.png\" width=70%</td>\n",
+    "</table>"
    ]
   },
   {
@@ -528,17 +605,37 @@
     }
    },
    "source": [
-    "Let's (continue to) hypothesize that the Encoder\n",
-    "- produces a Dictionary (key/value pairs)\n",
-    "- mapping Place-holder names to Concrete values\n",
+    "Attention allows the Decoder\n",
+    "- to directly access all of the Encoder latent states $\\bar\\h_{(1)} \\dots \\h_{(\\bar{T})}$\n",
+    "- at each time step of the Decoder\n",
     "\n",
+    "Thus, there is no need\n",
+    "- for an Encoder to create a full dictionary as the final Encoder latent state $\\bar\\h_{(\\bar T)}$\n",
+    "- for the Decoder to keep the dictionary in all it's latent states $\\h_{(1)} \\dots \\h_{(T)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Here is a picture of an Encoder/Decoder augmented with Attention\n",
+    "- we have add an additional box to the diagram for the NN that implements the function $D$\n",
+    "    - that maps $\\h_\\tp$ to $\\y_\\tp$\n",
+    "<br>\n",
+    "<br>\n",
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>Answering questions using Attention</center></th>\n",
+    "        <th><center>RNN Encoder/Decoder with Attention</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/Attention_example_1.png\" width=80%></td>\n",
+    "        <td><img src=\"images/RNN_layer_API_Encoder_Decoder_Attention.png\" width=80%</td>\n",
     "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Encoder_Decoder_no_attention.png\" width=70%</td>\n",
     "</table>"
    ]
   },
@@ -550,23 +647,20 @@
     }
    },
    "source": [
-    "And we further hypothesize that the Decoder\n",
-    "- performs Lookups \n",
-    "- by using the Decoder latent state $\\h_\\tp$\n",
-    "    - as a *query* that matches the keys of the Dictionary\n",
-    "    - in order to obtain the Concrete value required to produced output token at position $\\tt$\n",
-    "    $$\\hat\\y_\\tp = D(\\h_\\tp)$$\n",
+    "Notice that the final Encoder latent state $\\bar\\h_{(\\bar T)}$ is **no longer**  connected to the Decoder.\n",
     "\n",
-    "<br>\n",
-    "<br>\n",
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Query performing a Lookup in the Dictionary</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"images/Attention_example_2.png\" width=80%></td>\n",
-    "    </tr>\n",
-    "</table>"
+    "What is going on inside the \"box\" implementing function $D$ that we added at each time step ?\n",
+    "\n",
+    "The box's input at step $\\tt$\n",
+    "- the Decoder latent state $\\h_\\tp$\n",
+    "- the collection of Encoder latent states $\\bar\\h_{(1)} \\dots \\h_{(\\bar{T})}$\n",
+    "    - the red box in the above diagram\n",
+    "\n",
+    "That is, it is computing a $\\y_\\tp$ that is a function of both $\\h_\\tp$ and $\\bar\\h_{(1)} \\dots \\h_{(\\bar{T})}$\n",
+    "\n",
+    "$$\n",
+    "\\hat\\y_\\tp = D( \\h_\\tp,  [ \\bar\\h_{(1)} \\dots \\h_{(\\bar{T})} ])\n",
+    "$$"
    ]
   },
   {
@@ -577,37 +671,13 @@
     }
    },
    "source": [
-    "In this architecture\n",
-    "- the weights of the Decoder are solely for \"control\"\n",
-    "- and not for storing knowledge from the Context.\n",
-    "\n",
-    "The *Attention* mechanism allows the Decoder\n",
-    "- to **attend to** the part of Input $\\x$\n",
-    "- exactly when it is needed\n",
-    "\n",
-    "Attention\n",
-    "- creates a Dictionary of *key/value* pairs as a knowledge store\n",
-    "- causes the Decoder to create a *query* to perform Lookups"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Essentially we change  $D$ so that it is conditioned on\n",
-    "- $\\h_\\tp$: the query (Decoder state)\n",
-    "- **and** summary of the Context $\\bar \\h_{([1:\\bar T])}$\n",
-    "    - the key/value store\n",
-    "\n",
-    "The version of $D$ with Attention looks something like this\n",
-    "\n",
+    "Here are the inner workings of the NN for $D$:\n",
+    "    \n",
+    "<br>\n",
+    "<br>\n",
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>Decoder: Attention</center></th>\n",
+    "        <th><center>Decoder output transformation with attention</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td><img src=\"images/Decoder_attention.png\" width=60%></td>\n",
@@ -623,15 +693,63 @@
     }
    },
    "source": [
-    "At output position $\\tt$\n",
-    "we enable the Decoder to focus on (*attend to*)\n",
-    "- the position $\\bar \\tt$ of the input\n",
+    "Inside the box:\n",
+    "- the Decoder latent state $\\h_\\tp$ is used as a *query*\n",
+    "- which is matched against each of the Encoder latent states\n",
+    "- resulting in one Encoder latent state being chosen as $\\mathbf{c}_\\tp$\n",
+    "\n",
+    "The chosen Encoder latent state $\\mathbf{c}_\\tp$ and Decoder latent state $\\h_\\tp$\n",
+    "- are input to another Neural Network\n",
+    "- which produces output $\\hat\\y_\\tp$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Essentially we change  $D$ so that it is conditioned on\n",
+    "- $\\h_\\tp$: the query (Decoder state)\n",
+    "- **and** summary of the Context $\\bar \\h_{([1:\\bar T])}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "\n",
+    "The \"Choose\" box implements an *Attention* mechanism allows the Decoder\n",
+    "- to **attend to** the part of Input $\\x$ (represented via some Encoder latent state $\\bar\\h_{(\\bar\\tt)}$)\n",
     "- that is *relevant* for producing $\\hat \\y_\\tp$\n",
+    "- exactly when it is needed\n",
     "\n",
     "This seems very natural to a human\n",
-    "- rather than memorizing details\n",
+    "- rather than memorizing details (e.g., the big dictionary $\\bar\\h_{(\\bar T)}$ in the architecture without Attention)\n",
     "- we refer back to the context\n",
     "- focusing of only the part that is immediately needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "A big advantage of this approach:\n",
+    "- the weights of the Decoder are solely for \"control\" (e.g., creating the output according to the Answer template)\n",
+    "- and not for logic to copy the \"knowledge\" (dictionary) from latent state to latent state of the Decoder\n",
+    "- potentially making it easier to train (by more efficient use of the limited number of weights)\n",
+    "\n"
    ]
   },
   {
