--- a/Latex_macros.ipynb
+++ b/Latex_macros.ipynb
@@ -182,6 +182,7 @@
     "\\newcommand{\\dim}{d}\n",
     "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
     "\\newcommand{\\summaxact}{\\text{max}}\n",
+    "\\newcommand{idxb}{\\mathbf{i}}\n",
     "%\n",
     "%\n",
     "\n",
