--- a/Review_Advanced.ipynb
+++ b/Review_Advanced.ipynb
@@ -153,6 +153,20 @@
     }
    },
    "source": [
+    "# Purpose of this notebook\n",
+    "\n",
+    "This notebook is meant to serve as a *quick referenc* of key concepts/notations\n",
+    "from the Intro course.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Notation\n",
     "\n",
     "To ensure that everyone is up to speed on notation, let's review\n",
@@ -424,6 +438,27 @@
     }
    },
    "source": [
+    "## Output $\\hat\\y_\\tp$ of an RNN\n",
+    "\n",
+    "According to our pseudo-code and diagram\n",
+    "$$\n",
+    "\\hat\\y_\\tp = \\h_\\tp\n",
+    "$$\n",
+    "\n",
+    "That is: the output is the same as the latent state.\n",
+    "\n",
+    "It is easy to add another NN to transform $\\h_\\tp$ into a $\\hat\\y_\\tp$ that is different\n",
+    "- we will omit this additional layer for clarity\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Unrolled RNN diagram\n",
     "\n",
     "<table>\n",
@@ -626,7 +661,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "370px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
