--- a/Review_LLM.ipynb
+++ b/Review_LLM.ipynb
@@ -188,11 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "#  In-context Learning \n",
     "\n",
@@ -204,6 +200,14 @@
     "This is called *In-Context Learning*.\n",
     "\n",
     "- [In-Context Learning](In_Context_Learning.ipynb)\n",
+    "\n",
+    "\n",
+    "Here is a very crude notebook that uses the HuggingFace inference API to experiment with in-context learning.\n",
+    "\n",
+    "- [Experiment in In context learning: Colab](https://colab.research.google.com/github/kenperry-public/ML_Advanced_Spring_2023/blob/master/HF_inference_play.ipynb)\n",
+    "- [Experiment in In context learning: local](HF_inference_play.ipynb)\n",
+    "\n",
+    "## Beyond the LLM\n",
     "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
     "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)\n",
     "\n",
