--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -43,11 +43,17 @@
     "\n",
     "We then present the key concepts that form the basis for this course\n",
     "- For some: this will be review\n",
-    "- For others: it will be a preview\n",
+    "\n",
     "\n",
     "## Intro to Advanced Course\n",
     "\n",
     "- [Introduction to Advanced Course](Intro_Advanced.ipynb)\n",
+    "\n",
+    "Here is a *quick reference* of key concepts/notations from the Intro course\n",
+    "- For some: it will be a review, for others: it will be a preview.  \n",
+    "- We will devote a sub-module of this lecture to elaborate on each topic in slightly more depth.\n",
+    "    - For a more detailed explanation: please refer to the material from the Intro course ([repo](https://github.com/kenperry-public/ML_Spring_2023))\n",
+    "    \n",
     "- [Review and Preview](Review_Advanced.ipynb)\n",
     "\n",
     "\n",
@@ -93,7 +99,7 @@
     }
    },
    "source": [
-    "# Week 2: Review (continued)\n",
+    "# Week 2: Review/Preview (continued); Technical\n",
     "\n",
     "**Preview**\n",
     "\n",
@@ -108,17 +114,111 @@
     "**Plan**\n",
     "\n",
     "We continue the review/preview of key concepts that we started last week.\n",
-    "- We will *re-start* the module on Attention\n",
     "\n",
     "Our ultimate goal is to introduce the Transformer (which uses Attention heavily) in theory, and demonstrate its use in Large Language Models.\n",
     "\n",
-    "## Review continued\n",
+    "## Review/preview continued\n",
     "\n",
-    "### [Transformers: Review](Review_Transformer.ipynb)\n",
+    "### Transformers: Review continued\n",
+    "- [Attention (continued)](Intro_to_Attention.ipynb#Attention)\n",
+    "](Review_Transformer.ipynb)\n",
+    "- [Transformer](Transformer.ipynb)\n",
     "\n",
     "### [Natural Language Processing: Review](Review_NLP.ipynb)\n",
     "\n",
-    "### [Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)"
+    "### [Language Models, the future (present ?) of NLP: Review](Review_LLM.ipynb)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Beyond Transfer Learning: Fine-tuning a pre-trained model\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "We begin the \"technical\" part of the course: the programming tools that will enable the Course Project.\n",
+    "\n",
+    "We introduce \"Modern Transfer Learning\": using model hubs.\n",
+    "\n",
+    "The hub we will use for the final project: HuggingFace\n",
+    "- illustrate how to fine-tune a pre-trained model\n",
+    "- quick Intro to HF\n",
+    "    - best way to learn: through the course !\n",
+    "    - uses Datasets\n",
+    "        - will introduce later\n",
+    "    - PyTorch version (uses Trainer); we will focus on Tensorflow/Keras version\n",
+    "\n",
+    "**HuggingFace Transformers course**\n",
+    "\n",
+    "The best way to understand and use modern Transfer Learning is via\n",
+    "the [HuggingFace course](https://huggingface.co/course).\n",
+    "\n",
+    "You will learn\n",
+    "- about the Transformer\n",
+    "- how to use HuggingFace's tools for NLP (e.g., Tokenizers)\n",
+    "- how to perform common NLP tasks\n",
+    "    - especially with Transformers\n",
+    "- how to fine-tune a pre-trained model\n",
+    "- how to use the HuggingFace dataset API\n",
+    "\n",
+    "All of this will be invaluable for the Course Project.\n",
+    "- does not have to be done using HuggingFace\n",
+    "- but using at least parts of it will make your task easier\n",
+    "\n",
+    "\n",
+    "- [HuggingFace intro](Transfer_Learning_HF.ipynb)\n",
+    "    - [linked notebook: Using a pretrained Sequence Classifier](HF_quick_intro_to_models.ipynb) \n",
+    "\n",
+    "**Suggested reading**\n",
+    "\n",
+    "[HuggingFace course](https://huggingface.co/course)\n",
+    "- you are well-advised to follow this material over the next 3 weeks in preparation for the Course Project\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "## Functional Models\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Enough theory (for the moment) !\n",
+    "\n",
+    "The Transformer (whose theory we have presented) is built from plain Keras.\n",
+    "\n",
+    "Our goal is to dig into the **code** for the Transformer so that you too will learn how to build advanced models.\n",
+    "\n",
+    "Before we can do this, we must\n",
+    "- go beyond the Sequential model of Keras: introduction to the Functional model\n",
+    "- understand more \"advanced\" features of Keras: customomizing layers,  training loops, loss functions\n",
+    "- The Datasets API\n",
+    "\n",
+    "**Basics**\n",
+    "\n",
+    "We start with the basics of Functional models, and will give a coding example of such a model in Finance.\n",
+    "\n",
+    "- [Functional API](Functional_Models.ipynb)\n",
+    "\n",
+    "\n",
+    "### Functional Model Code:  A Functional model in Finance: \"Factor model\"\n",
+    "\n",
+    "We illustrate the basic features of Functional models with an example\n",
+    "- does not use the additional techniques of the next section (Advanced Keras)\n",
+    "\n",
+    "[Autoencoders for Conditional Risk Factors](Autoencoder_for_conditional_risk_factors.ipynb)\n",
+    "- [code](https://github.com/stefan-jansen/machine-learning-for-trading/blob/main/20_autoencoders_for_conditional_risk_factors/06_conditional_autoencoder_for_asset_pricing_model.ipynb)"
    ]
   },
   {
