--- a/Attention_Lookup.ipynb
+++ b/Attention_Lookup.ipynb
@@ -196,7 +196,16 @@
     "- \"query\" $\\contextcsm_\\tp = \\h_\\tp$ is the state of the Decoder when generating output $\\hat\\y_\\tp$ at position $\\tt$\n",
     "- we want to output $\\bar{\\contextcsm}_{(\\bar \\tt)}$: one latent state of the Encoder\n",
     "    - relevant for output position $\\tt$\n",
-    "    - as described by  $\\contextcsm_\\tp = \\h_\\tp$ "
+    "    - as described by  $\\contextcsm_\\tp = \\h_\\tp$ \n",
+    "    \n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Decoder output transformation with attention</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Decoder_attention.png\" width=60%></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -256,7 +265,8 @@
    },
    "source": [
     "The CSM has $\\bar T$ key/value pairs\n",
-    "- the key and value for row $\\bar \\tt$ of the CSM is state $\\bar \\h_\\tp$\n",
+    "- one for each output position of the Encoder: $\\bar \\h_{(1 \\ldots \\bar T)}$\n",
+    "- the key and value for position $\\bar \\tt$ of the CSM is state $\\bar \\h_\\tp$\n",
     "$$k_{\\bar \\tt} = v_{\\bar \\tt} = \\bar \\h_{(\\bar \\tt)}$$\n",
     "\n",
     "The Decoder creates one query for each of the $T$ positions of the Decoder output\n",
@@ -350,7 +360,13 @@
     "- the Target context is length $T$\n",
     "    - e.g., Decoder states $\\h_\\tp$ in an Encoder/Decoder\n",
     "\n",
-    "All vectors ($\\h, \\bar\\h$) are length $d$\n",
+    "Each element in the vectors ($\\h, \\bar\\h$) are length $d$\n",
+    "$$\n",
+    "\\begin{array} \\\\\n",
+    "| \\bar \\h_{(\\bar \\tt)} |  & = & d &  1 \\le \\bar \\tt \\le \\bar T \\\\\n",
+    "| \\h_\\tp | & = & d & 1 \\le \\tt \\le T \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
     "\n",
     "This describes Cross-Attention as would be implemented from the Decoder to the Encoder\n",
     "in an Encoder-Decoder architecture."
@@ -360,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -897,6 +913,27 @@
     "Attribution: https://www.tensorflow.org/images/tutorials/transformer/Transformer-1layer-words.png\n",
     "\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The above diagram illustrates the difference between\n",
+    "- Self Attention in the Encoder (left side)\n",
+    "- **Masked** Self Attention in the Decoder (right side)\n",
+    "\n",
+    "Take a look at the range of positions accessible by the first output position\n",
+    "- in the Encoder: **all** Input positions\n",
+    "- in the Decoder: **only** the first input\n",
+    "\n",
+    "Similarly for position $\\tt$\n",
+    "- in the Encoder: **all** Input positions\n",
+    "- in the Decoder: **only** the prefix of length $\\tt$\n"
    ]
   },
   {
