--- a/Autoencoder_for_conditional_risk_factors.ipynb
+++ b/Autoencoder_for_conditional_risk_factors.ipynb
@@ -334,7 +334,8 @@
    "source": [
     "## Pre-defined sensitivities, solve for factors\n",
     "\n",
-    "Suppose $\\Bbeta$ is given: for each ticker $s$, sensitivity of $s$ to $\\F_j$\n",
+    "Suppose $\\Bbeta$ is given: \n",
+    "- for each ticker $s$: $\\Bbeta_{s, j}$ is the sensitivity of $s$ to $\\F_j$\n",
     "\n",
     "Solve for $\\F^\\dp$ for each $d$\n",
     "\n",
@@ -359,7 +360,7 @@
     "  \\vdots  \\\\\n",
     " \\F^\\dp_\\nfactors\n",
     "  \\end{pmatrix}, \\, \\,\n",
-    "\\beta = \\begin{pmatrix}\n",
+    "\\Bbeta = \\begin{pmatrix}\n",
     "\\beta_{1,1}, & \\ldots & \\beta_{1, \\nfactors} \\\\\n",
     "\\beta_{2,1}, & \\ldots  &\\beta_{2, \\nfactors} \\\\\n",
     "\\vdots \\\\\n",
@@ -367,7 +368,7 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "<br>\n",
-    "$$\\r^\\dp = \\beta_s * \\F^\\dp$$  \n"
+    "$$\\r^\\dp = \\Bbeta * \\F^\\dp$$  \n"
    ]
   },
   {
@@ -452,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -460,6 +461,24 @@
     "\n",
     "The paper refers to the model as a kind of Autoencoder.\n",
     "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Autoencoder</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Autoencoder_vanilla.png\"></td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Let's review the topic.\n",
     "- An Autoencoder has two parts: an Encoder and a Decoder\n",
     "- The Encoder maps inputs $\\x^\\ip$, of length $n$\n",
@@ -467,9 +486,27 @@
     "- If $n' \\lt n$, the latent vector is a *bottleneck*\n",
     "    - reduced dimension representation of $\\x^\\ip$\n",
     "- The Decoder maps $\\z^\\ip$ into $\\hat\\x^\\ip$, of length $n$, that is an approximation of $\\x^\\ip$\n",
-    "    \n",
-    "So, the training examples for an Autoencoder are\n",
-    "$$\\langle \\X^\\dp, \\y^\\dp \\rangle = \\langle \\R^\\dp, \\R^\\dp \\rangle$$"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The training examples for an Autoencoder are\n",
+    "$$\\langle \\X^\\dp, \\y^\\dp \\rangle = \\langle \\R^\\dp, \\R^\\dp \\rangle$$\n",
+    "\n",
+    "That is\n",
+    "- we want the output for each example to be identical to the input\n",
+    "\n",
+    "The challenge:\n",
+    "- the input is passed through a \"bottleneck\" $\\z$ of lower dimensions than the example length $n$\n",
+    "- information is lost\n",
+    "- analog: using PCA for dimensionality reduction, but with non-linear operations"
    ]
   },
   {
