--- a/Functional_Models.ipynb
+++ b/Functional_Models.ipynb
@@ -1140,7 +1140,7 @@
     "- How to override a `Model`'s methods will be a future topic\n",
     "- The mathematics of the VAE will be a future topic\n",
     "\n",
-    "For now, we focus on the code of the custom training step/\n",
+    "For now, we focus on the code of the custom training step.\n",
     "\n",
     "**Note**\n",
     "\n",
