--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -121,8 +121,8 @@
     "\n",
     "### Transformers: Review continued\n",
     "- [Attention (continued)](Intro_to_Attention.ipynb#Attention)\n",
-    "](Review_Transformer.ipynb)\n",
     "- [Transformer](Transformer.ipynb)\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb) \n",
     "\n",
     "### [Natural Language Processing: Review](Review_NLP.ipynb)\n",
     "\n",
