--- a/Intro_to_Attention.ipynb
+++ b/Intro_to_Attention.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "It is easy to add another NN to transform $\\h_\\tp$ into a $\\hat\\y_\\tp$ that is different.\n",
     "\n",
-    "We can add a NN to the Decoder RNN that implements a function $D$ that transforms the latent state into an output.\n",
+    "- We can add a NN to the Decoder RNN that implements a function $D$ that transforms the latent state into an output.\n",
     "\n",
     "$$\\hat\\y_\\tp = D(\\h_\\tp)$$\n",
     "\n",
