--- a/Review_Advanced.ipynb
+++ b/Review_Advanced.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "# Purpose of this notebook\n",
     "\n",
-    "This notebook is meant to serve as a *quick referenc* of key concepts/notations\n",
+    "This notebook is meant to serve as a *quick reference* of key concepts/notations\n",
     "from the Intro course.\n"
    ]
   },
