--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -425,13 +426,31 @@
    "source": [
     "## Identifying $\\y_\\tp$ with $\\h_\\tp$\n",
     "\n",
-    "When we introduced the RNN, at each step $\\tt$ of the loop, we defined two outputs\n",
-    "$\\h_\\tp$\n",
-    "and\n",
-    "$\\y_\\tp$.\n",
+    "The simplest RNN (corresponding to our diagrams) use the latent state $\\h_\\tp$ as the output $\\hat\\y_\\tp$\n",
+    "$$\n",
+    "\\hat\\y_\\tp = \\h_\\tp\n",
+    "$$\n",
     "\n",
-    "In general, we only need to output $\\h_\\tp$\n",
-    "- $\\y_\\tp$ can be defined as a further processing of $\\h_\\tp$"
+    "It is easy to add another NN to transform $\\h_\\tp$ into a $\\hat\\y_\\tp$ that is different.\n",
+    "\n",
+    "- We can add a NN to the Decoder RNN that implements a function $D$ that transforms the latent state into an output.\n",
+    "\n",
+    "$$\\hat\\y_\\tp = D(\\h_\\tp)$$\n",
+    "\n",
+    "Here is what the additional NN looks like:\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Decoder output transformation: No attention</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Decoder_no_attention.png\" width=70%></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -442,7 +461,7 @@
     }
    },
    "source": [
-    "Henceforth, we will assume the style of a single output $\\h_\\tp$\n",
+    "In the context of the Transformer:we will assume the style of a single output $\\h_\\tp$\n",
     "\n",
     "The reason for doing this:\n",
     "- We can \"stack\" $N$ Transformer layers (just as we can stack RNN layers)\n",
@@ -479,6 +498,23 @@
    "source": [
     "# Inside the Transformer Encoder: Self Attention\n",
     "\n",
+    "There are two \"styles\" of Transformer\n",
+    "- Encoder\n",
+    "- Decoder\n",
+    "\n",
+    "They are often paired into an Encoder-Decoder architecture but may also be used stand-alone.\n",
+    "\n",
+    "We begin our discussion of the Transformer by looking at the Encoder style Transformer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "If we look inside the box computing the direct function, we will find several layers\n",
     "- An Attention layer\n",
     "    - To influence which elements of the input sequence $\\x$ to attend/focus when outputting $\\y_\\tp$\n",
@@ -503,15 +539,13 @@
     }
    },
    "source": [
-    "An Attention layer that attends/focus on its inputs implements what is called *Self-attention*\n",
-    "- We will soon see the possibility of attending to other values\n",
+    "The above diagram shows an Encoder that takes an input sequence $\\x_{(1 \\ldots T)}$\n",
+    "- consistent with our diagram of an Encoder computing a direct function of the entire input sequence\n",
     "\n",
-    "If the function for $\\h_\\tp$ is restricted to prefix $\\x_{(1 \\ldots \\tt)}$ the Attention layer can use causal masking of the input sequence.\n",
+    "When the Attention is directed at the Encoder's own inputs: we call this *Self-Attention*.\n",
     "\n",
-    "This is referred to as *Masked Self-Attention*.\n",
-    "\n",
-    "The Feed Forward Network computes the function, given the elements of the input sequence\n",
-    "that are being attend to."
+    "Moreover, the Attention allows access to all elements of the input sequence\n",
+    "- allowing the computation of a direct function of all elements\n"
    ]
   },
   {
@@ -526,6 +560,10 @@
     "\n",
     "As we will demonstrate in detail below\n",
     "- The Transformer's operations can be performed in parallel versus sequentially for the RNN\n",
+    "    - parallel processing of each element of the output sequence\n",
+    "    - number of steps to produce an output sequence of length $T$\n",
+    "        - is constant, rather than $T$\n",
+    "    - faster !\n",
     "- Gradients less likely to vanish or explode\n",
     "\n"
    ]
@@ -573,6 +611,10 @@
     "\n",
     "- higher memory \n",
     "    - the $Q$ matrix is shape $(T \\times d)$; the $K, V$ matrices are $(\\bar T \\times d)$\n",
+    "        - internal dimensions are size $d$\n",
+    "        - One query for each of the $T$ positions of the output sequence\n",
+    "            - or, as we will see in the Encoder-Decoder combination\n",
+    "                - $\\bar T$ outputs (\"latent states\") of the Encoder to attend to\n",
     "    - intermediate matrices, e.g. \n",
     "    $$Q * K^T$$\n",
     "    are of shape $(T \\times \\bar T)$\n",
@@ -911,20 +953,60 @@
     }
    },
    "source": [
+    "# Transformer: Decoder\n",
+    "\n",
+    "The second type of Transformer is called the Decoder style.\n",
+    "\n",
+    "It is often pair with an Encoder to form and Encoder-Decoder architecture but is also use stand-alone.\n",
+    "\n",
+    "A Decoder usually operates in an *auto regressive* manner\n",
+    "- it has **no initial** input\n",
+    "- the output $\\hat y_\\tp$ of time step $\\tt$ is appended to the input\n",
+    "    - so the input at time step $\\tt$ is $$\\hat\\y_{(1 \\ldots \\tt-1)}$$\n",
+    "\n",
+    "When this occurs, the Encoder at time step $\\tt$ can only attend to a *prefix* of $\\hat\\y_{(1..T)}$\n",
+    "$$\n",
+    "\\hat\\y_{(1 \\ldots \\tt-1)}\n",
+    "$$\n",
+    "\n",
+    "This is implemented by a form of Attention called **Masked** Self-Attention\n",
+    "-  $\\hat\\y_{(1..T)}$ is masked to make visible only the prefix $\\hat\\y_{(1 \\ldots \\tt-1)}$\n",
+    "\n",
+    "We will introduce the Decoder style Transformer as part of the Encoder-Decoder architecture.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Transformer: (Encoder/Decoder style)\n",
     "\n",
     "It is common to use two Transformers in an Encoder/Decoder configuration.\n",
     "\n",
-    "Recall the Encoder/Decoder architecture (using RNN's rather than Transformers in the diagram)\n",
+    "Refer back to our [Attention module](Intro_to_Attention.ipynb#Attention)\n",
+    "- example on Question Answering\n",
+    "    - a Input consisting of  Context and a Question is processed by the Encoder\n",
+    "    - the Output Answer is generated auto-regressively by the Decoder\n",
+    "        - attending to the Encoder output\n",
     "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "<table>\n",
     "    <tr>\n",
-    "        <th><center><strong>Encoder/Decoder for language translation</strong></center></th>\n",
+    "        <th><center>RNN Encoder/Decoder with Attention</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/RNN_layer_API_Encoder_Decoder_Language_Translation.png\" width=80%></td>\n",
+    "        <td><img src=\"images/RNN_layer_API_Encoder_Decoder_Attention.png\" width=80%</td>\n",
     "    </tr>\n",
-    "</table>"
+    "    <tr>\n",
+    "        <td><img src=\"images/Encoder_Decoder_no_attention.png\" width=70%</td>\n",
+    "</table>\n"
    ]
   },
   {
@@ -935,11 +1017,12 @@
     }
    },
    "source": [
-    "The Decoder in the Encoder/Decoder architecture is *auto-regressive*\n",
-    "- input initially empty\n",
-    "- output $\\hat \\y_{(\\tt-1)}$ at step $\\tt-1$ appended to previous outputs to become input for position $\\tt$\n",
-    "    - step $\\tt$ input: $\\hat\\y_{([0:\\tt-1])}$\n",
-    "\n"
+    "The Encoder part of the pair\n",
+    "- has full visibility to the input sequence $\\x_{(1 \\ldots \\bar T)}$\n",
+    "    - via Self-Attention\n",
+    "- it transformers the input into sequence $\\bar \\h_{(1 \\ldots \\bar T)}$\n",
+    "    - which is made available to the Decoder when generated each element of the Output $\\hat \\y_\\tp$\n",
+    "    \n"
    ]
   },
   {
@@ -950,12 +1033,13 @@
     }
    },
    "source": [
-    "The Encoder-Decoder pair acts as a function\n",
-    "- from Input\n",
-    "    - processed by the Encoder\n",
-    "- to Target\n",
-    "    - generated auto-regressively by the Decoder\n",
-    "    - conditioned on the Encoder output"
+    "The Decoder part of the pair\n",
+    "- can attend to the Encoder Input $\\bar \\h_{(1 \\ldots \\bar T)}$ when generating any Output $\\hat \\y_\\tp$\n",
+    "- the Output is produced auto-regressively\n",
+    "    - so Output at position $\\tt$ is a function of\n",
+    "        - $\\hat\\y_{(1..\\tt-1)}$: the Output generated thus far\n",
+    "        - the encoded input $\\bar \\h_{(1 \\ldots \\bar T)}$ \n",
+    "        "
    ]
   },
   {
@@ -966,12 +1050,12 @@
     }
    },
    "source": [
-    "The *Decoder Transformer*\n",
-    "- is similar to the Encoder Transformer in that both use Self-Attention to their own inputs\n",
-    "- differs in that it can also attend to the output of the Encoder.\n",
-    "\n",
-    "Attending to the output of another model (e.g., Decoder attending to Encoder output) is called *Cross Attention* (Encoder/Decoder Attention).\n",
-    "\n",
+    "The Decoder uses **two types** of Attention\n",
+    "- Attention to the Encoder output $\\bar \\h_{(1 \\ldots \\bar T)}$: Encoder/Decoder **Cross Attention**\n",
+    "- Self-Attention to the Output generated thus far $\\hat\\y_{(1..\\tt-1)}$\n",
+    "    - **Masked Self-Attention**\n",
+    "        - Self-Attention: attends to its own input\n",
+    "        - Masked: access only to prefix $\\hat\\y_{(1..\\tt-1)}$ rather than full $\\hat\\y_{(1..T)}$\n",
     "\n",
     "<table>\n",
     "    <tr>\n",
@@ -1030,7 +1114,7 @@
     }
    },
    "source": [
-    "Note that the Decoder is recurrent (generative)\n",
+    "Note that the Decoder is recurrent (auto-regressive; generative)\n",
     "- it generates a single output at a time\n",
     "- unlike the Encoder, which generates all outputs (i.e., \"encodings\") in parallel"
    ]
@@ -1279,7 +1363,7 @@
     "## How is the direct function computed ?\n",
     "\n",
     "The Encoder uses self-attention\n",
-    "- So the keys and values of the CSM are derived directly from input sequence $x_{(1 \\ldots T)}$\n",
+    "- So the keys and values of the CSM are derived directly from input sequence $\\x_{(1 \\ldots T)}$\n",
     "\n",
     "During training, the Encoder\n",
     "- learns a query, derived from input sequence $\\x_{(1 \\ldots T)}$\n",
